# Meituan_AI

./: .env.example  .gitignore  1.txt  DEMO_CHECKLIST.md  LICENSE  PRD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/docs/: backend_architecture_decisions.md  demo_guide.md  progress_archive.md  provider_contracts.md  provider_resources.md
backend/migrations/: env.py
backend/scripts/: benchmark_prompts.py  check_api_contract.py  check_apply_proposal_api.py  check_apply_replan.py  check_auto_replan_generation.py  check_deepseek_real_smoke.py  check_deepseek_replanner.py  check_demo_flow.py  check_eval_framework.py  check_execution_action_planner.py  check_execution_api.py  check_execution_context_builder.py  check_execution_pipeline.py  check_execution_provider_refresh.py  check_execution_risk_scanner.py  check_execution_snapshot_persistence.py  check_llm_replanner.py  check_plan_context_builder.py  check_plan_persistence.py  check_plan_response_adapter.py  check_planning_service_rule_based.py  check_prompt_registry.py  check_proposal_schema.py  check_provider_catalog.py  check_replan_api_contract.py  check_replan_context.py  check_replan_decision.py  check_replan_proposal_api.py  check_replan_proposal_list_api.py  check_replan_proposal_persistence.py  check_risk_coverage.py  check_rule_based_planner.py  check_rule_based_replanner.py  eval_replanner.py
backend/tests/: test_amap_poi_service.py  test_amap_route_service.py  test_api.py
(+198 files in other folders)
